@@ -13,6 +13,7 @@
 #' @param targetN integer vector with target sample sizes over time, same length as \code{targetDate}
 #' @param targetDate \code{Date} or character vector corresponding to \code{targetN}
 #' @param closeDate \code{Date} or characterstring.  Used for randomizations per month and per site-month - contains the dataset closing date to be able to compute the number of dates that a group (country, site, etc.) has been online since randomizating its first subject.
+#' @minrand integer.  Minimum number of randomized subjects a country must have before a box plot of time to randomization is included.
 #' @param panel character string.  Name of panel, which goes into file base names and figure labels for cross-referencing.
 #' @param h numeric.  Height of ordinary plots, in inches.
 #' @param w numeric.  Width of ordinary plots.
@@ -28,7 +29,7 @@
 accrualReport <-
   function(formula, data=NULL, subset=NULL, na.action=na.retain,
            dateRange=NULL, zoom=NULL, targetN=NULL, targetDate=NULL,
-           closeDate=NULL, panel = 'accrual',
+           closeDate=NULL, minrand=10, panel = 'accrual',
            h=2.5, w=3.75, hb=5, wb=5, hdot=3.5)
 {
   formula <- Formula(formula)
@@ -114,6 +115,10 @@ accrualReport <-
     z <- c(z, g(nsites, 0))
     k <- c(k, 'Sites')
   }
+  if(penroll) {
+    z <- c(z, sum(! is.na(Y[[enroll]])))
+    k <- c(k, 'Subjects enrolled')
+  }
 
   if(psite && prandomize) {
     rdate <- Y[[randomize]]
@@ -124,7 +129,9 @@ accrualReport <-
     if(pclose) {
       months <- as.numeric(difftime(closeDate, rdate, units='days')) /
         (365.25 / 12)
-      maxs       <- tapply(months, Site, max, na.rm=TRUE)
+      mx <- function(x) if(! length(x) || all(is.na(x))) NA
+       else max(x, na.rm=TRUE)
+      maxs       <- tapply(months, Site, mx)
       sitemonths <- sum(maxs, na.rm=TRUE)
       z <- c(z, g(max(months, na.rm=TRUE), 1),
                 g(mean(maxs, na.rm=TRUE), 1),
@@ -222,12 +229,24 @@ accrualReport <-
     y <- as.numeric(difftime(Y[[j]], Y[[enroll]], units='days'))
     x1 <- if(pregion)  X[[region]]
     x2 <- if(pcountry) X[[country]]
+    use <- TRUE
+    coexcl <- 0
+    if(pcountry && minrand > 0) {
+      ## Exclude countries randomizing fewer than minrand subject
+      nrn <- tapply(y, x2, function(x) sum(! is.na(x)))
+      if(any(nrn < minrand)) {
+        coexcl <- sum(nrn < minrand)
+        countrieskeep <- names(nrn)[nrn >= minrand]
+        use <- x2 %in% countrieskeep
+      }
+    }
     form <- if(length(x1) && length(x2)) x2 ~ y | x1
      else if(length(x1)) x1 ~ y
      else if(length(x2)) x2 ~ y
      else x2 ~ 1
     print(bwplot(form, panel=panel.bpplot, xlab='Days to Randomization',
-                 scales=list(y='free'),
+                 subset=use,
+                 scales=list(y='free', rot=c(0,0)),
                  violin=TRUE,
                  violin.opts=list(col=adjustcolor('blue', alpha.f=.35),
                                   border=FALSE)))
@@ -247,8 +266,12 @@ accrualReport <-
     legend <- if(! length(legend)) ''
      else paste('. ', paste(legend, collapse='\n'), sep='')
 
+    excc <- if(coexcl > 0) paste('.', coexcl, 'countries with fewer than',
+                                 minrand, 'randomized subjects are not shown.')
+    else ''
     putFig(panel=panel, name=lb,
-           longcaption='\\protect\\eboxpopup{Extended box} plots and violin plots showing the distribution of days from enrollment to randomization~\\hfill\\lttc',
+           longcaption=paste('\\protect\\eboxpopup{Extended box} plots and violin plots showing the distribution of days from enrollment to randomization',
+             excc, '~\\hfill\\lttc', sep=''),
            caption='Days from enrollment to randomization',
            tcaption='Days from enrollment to randomization',
            tlongcaption=paste('Days from enrollment to randomization',
